# Encrypt3DModel

./: .air.toml  .gitignore  LICENSE  README.md  babel.config.js  go.mod  index.html  main.go  package-lock.json  package.json  server.js  webpack.config.js
pkg/cors/: cors.go
pkg/utils/: utils.go
public/models/: 01.STEP  02.STEP  03.STEP  04.STEP  1.STEP  2.STEP  AVG01.mtl
public/wasm/: lib.wasm
src/: index.ts  sw.ts
src/loaders/: StepFileLoader.ts  solidParser.ts
web/: package.json  tsconfig.json
web/public/: sw.js
web/public/models/: zhuzi.mtl
web/public/wasm/: lib.js
web/src/: App.css  App.tsx  index.ts  sw.ts
web/src/wasm/: Cargo.toml  lib.rs
